# debug-router

./: DEPS  DebugRouter.podspec
.github/workflows/: ci.yml  remote-debug-driver-publish-npm.yml
debug_router/Android/DebugRouter/: CMakeLists.txt  build.gradle
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/: DebugRouterReport.java  NativeReportDelegate.java  NativeReportServiceDelegate.java
debug_router/Android/DebugRouter/src/main/java/com/lynx/debugrouter/base/net/: IDebugRouterWebSocketService.java
debug_router/Common/: debug_router_slot.h
debug_router/android/debug_router/src/main/java/com/lynx/debugrouter/: DebugRouter.java
debug_router/common/: BUILD.gn  debug_router.cc  debug_router.h
debug_router/harmony/: BUILD.gn  build-profile.json5  harmony.gni  oh-package.json5  parameter.json
debug_router/harmony/AppScope/resources/base/element/: string.json
debug_router/harmony/debug_router/: BUILD.gn  oh-package.json5
debug_router/harmony/debug_router/src/main/base/: closure.h  napi_util.cc
debug_router/harmony/debug_router/src/main/base/fml/: delayed_task.cc  delayed_task.h  make_copyable.h  message_loop.cc  message_loop.h  message_loop_harmony.cc  message_loop_harmony.h  message_loop_impl.cc  message_loop_impl.h  message_loop_task_queues.cc  message_loop_task_queues.h  task_runner.cc  task_runner.h  task_source.cc  task_source.h  timerfd.cc  timerfd.h  unique_fd.cc  unique_fd.h  unique_object.h  wakeable.h
debug_router/harmony/debug_router/src/main/base/fml/memory/: ref_counted.h  ref_counted_internal.h  ref_ptr.h  ref_ptr_internal.h
debug_router/harmony/debug_router/src/main/base/fml/synchronization/: waitable_event.cc  waitable_event.h
debug_router/harmony/debug_router/src/main/base/fml/time/: time_point.cc  time_point.h  time_utils.cc  time_utils.h
debug_router/harmony/debug_router/src/main/cpp/: debug_router_global_handler_harmony.cc  debug_router_global_handler_harmony.h  debug_router_harmony.cc  debug_router_harmony.h  debug_router_log_harmony.cc  debug_router_log_harmony.h  debug_router_message_handler_harmony.cc  debug_router_message_handler_harmony.h  debug_router_session_handler_harmony.cc  debug_router_session_handler_harmony.h  debug_router_state_listener_harmony.cc  debug_router_state_listener_harmony.h  entry.cc  native_slot_harmony.cc  native_slot_harmony.h
debug_router/harmony/debug_router/src/main/ets/: DebugRouter.ets  DebugRouterGlobalHandler.ets  DebugRouterSessionHandler.ets  DebugRouterSlot.ets  DebugRouterSlotDelegate.ets  Index.ets  NativeslotDelegate.ets
debug_router/harmony/debug_router/src/main/ets/types/: index.d.ts
debug_router/harmony/debug_router/src/main/ets/types/libdebugrouter/: index.d.ts
debug_router/harmony/entry/: build-profile.json5  oh-package.json5
debug_router/harmony/entry/src/main/ets/pages/: Index.ets
debug_router/harmony/script/: build.py
debug_router/iOS/: DebugRouter.mm
debug_router/iOS/public/: DebugRouter.h
debug_router/iOS/report/: DebugRouterReport.h  DebugRouterReport.m
debug_router/ios/: DebugRouter.mm
debug_router/ios/public/: DebugRouter.h
debug_router/native/: BUILD.gn
debug_router/native/android/: DebugRouterSoLoad.cc  debug_router_android.cc  debug_router_report_android.cc  debug_router_report_android.h  debug_router_report_service_android.cc  debug_router_report_service_android.h
debug_router/native/android/base/android/: android_jni.cc
debug_router/native/base/: socket_guard.h
debug_router/native/core/: custom_message_transceiver.h  debug_router_core.cc  debug_router_core.h  debug_router_state_listener.cc  debug_router_state_listener.h  message_transceiver.h  session_filter_util.cc  session_filter_util.h
debug_router/native/harmony/: debug_router_harmony.cc  debug_router_harmony.h
debug_router/native/net/: socket_server_client.cc  socket_server_client.h  websocket_client.cc  websocket_client.h  websocket_task.cc  websocket_task.h
debug_router/native/processor/: processor.cc
debug_router/native/protocol/: md5.cc
debug_router/native/report/: debug_router_meta_info.h  debug_router_native_report.h  debug_router_report.h  debug_router_report_service.h
debug_router/native/socket/: socket_server_api.cc  socket_server_api.h  usb_client.cc  usb_client.h  work_thread_executor.cc  work_thread_executor.h
debug_router/native/socket/posix/: socket_server_posix.cc  socket_server_posix.h
debug_router/native/socket/win/: socket_server_win.cc  socket_server_win.h
debug_router/native/test/: BUILD.gn  session_filter_util_unittest.cc  socket_server_posix_unittest.cc  socket_server_smoke_unittest.cc  socket_util_unittest.cc  usb_client_unittest.cc  usb_reconnect_race_unittest.cc  websocket_task_unittest.cc  work_thread_executor_unittest.cc
debug_router_connector/: package-lock.json  package.json
debug_router_connector/src/connector/: DebugRouterConnector.ts
debug_router_connector/src/device/Harmony/: HarmonyDevice.ts  HarmonyDeviceManager.ts
debug_router_connector/src/device/android/: AndroidDeviceManager.test.ts  AndroidDeviceManager.ts
debug_router_connector/src/utils/: hdc.validator.ts
debug_router_connector/src/utils/hdc/: TargetClient.ts  client.ts  connection.ts  tracker.ts
debug_router_connector/src/utils/hdc/command/host/: targets.ts
remote_debug_driver/: pnpm-lock.yaml
remote_debug_driver/src/server/core/: driver.ts
test/e2e_test/connector_test/: package-lock.json
test/unit_test/: check_jni_onload_harness.py  check_test_run.py
