# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

assert(is_harmony)
import("//build/config/harmony/config.gni")
import("//config.gni")

root_path_prefix = get_path_info("../../../", "abspath")

# auto roll primjs version
primjs_native_lib_dir = "oh_modules/@lynx/vmsdk/libs/${harmony_app_abi}"

group("harmony") {
  deps = [
    ":native_lib",
    "//platform/harmony/lynx_devtool:lynx_devtool_group",
  ]
}

shared_library("native_lib") {
  output_name = "lynx"

  sources = [ "entry.cc" ]

  deps = [
    "${root_path_prefix}/core/runtime/bindings/napi:napi_binding_jsvm",
    "${root_path_prefix}/core/runtime/jsi/jsvm",
    "//lynx/base/trace/native:trace",
    "//lynx/core:lynx_native",
    "//lynx/core/runtime/bindings/napi:napi_binding_quickjs",
    "//lynx/platform/harmony/lynx_harmony:native",
    "//lynx/platform/harmony/lynx_xelement",
    "//lynx/third_party/quickjs",
  ]

  cflags = []
  lib_dirs = [ primjs_native_lib_dir ]
  libs = [
    "napi",
    "napi_v8",
    "napi_adapter",
    "quick",
  ]

  public_configs = [ ":harmony_public_config" ]

  if (enable_testbench_replay) {
    deps += [ "//lynx/core/services/replay" ]
  }

  if (enable_testbench_recorder) {
    deps += [ "//lynx/core/services/recorder:recorder" ]
  }
}

config("harmony_public_config") {
  defines = [
    "OS_HARMONY=1",
    "OS_POSIX=1",
  ]
  if (enable_inspector) {
    defines += [ "EXPORT_SYMBOLS_FOR_DEVTOOL=1" ]
  }
}
