# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//build/config/harmony/config.gni")

source_set("debug_router_core") {
  defines = [ "JSON_USE_EXCEPTION=0" ]

  include_dirs = [
    ".",
    "../../",
    "../../third_party/jsoncpp/include",
  ]

  cflags_cc = [
    "-Wno-extra-semi",
    "-Wno-unused-private-field",
    "-Wno-reorder-ctor",
    "-Wno-implicit-fallthrough",
    "-Wno-invalid-noreturn",
    "-Wno-potentially-evaluated-expression",
    "-Wno-sign-compare",
    "-Wno-delete-non-abstract-non-virtual-dtor",
  ]

  sources = [
    "base/socket_guard.h",
    "core/debug_router_config.cc",
    "core/debug_router_config.h",
    "core/debug_router_core.cc",
    "core/debug_router_core.h",
    "core/debug_router_global_handler.h",
    "core/debug_router_message_handler.h",
    "core/debug_router_session_handler.h",
    "core/debug_router_state_listener.cc",
    "core/debug_router_state_listener.h",
    "core/message_transceiver.cc",
    "core/message_transceiver.h",
    "core/native_slot.cc",
    "core/native_slot.h",
    "core/util.cc",
    "core/util.h",
    "log/logging.cc",
    "log/logging.h",
    "net/socket_server_client.cc",
    "net/socket_server_client.h",
    "net/websocket_client.cc",
    "net/websocket_client.h",
    "net/websocket_task.cc",
    "net/websocket_task.h",
    "processor/message_assembler.cc",
    "processor/message_assembler.h",
    "processor/message_handler.h",
    "processor/processor.cc",
    "processor/processor.h",
    "protocol/events.h",
    "protocol/md5.cc",
    "protocol/md5.h",
    "protocol/protocol.cc",
    "protocol/protocol.h",
    "socket/blocking_queue.h",
    "socket/count_down_latch.cc",
    "socket/count_down_latch.h",
    "socket/socket_server_api.cc",
    "socket/socket_server_api.h",
    "socket/socket_server_type.h",
    "socket/usb_client.cc",
    "socket/usb_client.h",
    "socket/usb_client_listener.h",
    "socket/work_thread_executor.cc",
    "socket/work_thread_executor.h",
    "thread/debug_router_executor.cc",
    "thread/debug_router_executor.h",
  ]
  if (is_win) {
    sources += [
      "socket/win/socket_server_win.cc",
      "socket/win/socket_server_win.h",
    ]
  } else {
    sources += [
      "socket/posix/socket_server_posix.cc",
      "socket/posix/socket_server_posix.h",
    ]
  }

  public_deps = [
    "//third_party/jsoncpp:jsoncpp",
  ]
}
