# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//build/config/harmony/config.gni")

shared_library("debug_router_group") {
  output_name = "debugrouter"

  include_dirs = [ 
    ".",
    "../../../",
  ]

  sources = [
    "debug_router/native/base/no_destructor.h",
    "src/main/base/napi_util.cc",
    "src/main/base/napi_util.h",
    "src/main/cpp/debug_router_global_handler_harmony.cc",
    "src/main/cpp/debug_router_global_handler_harmony.h",
    "src/main/cpp/debug_router_harmony.cc",
    "src/main/cpp/debug_router_harmony.h",
    "src/main/cpp/debug_router_log_harmony.cc",
    "src/main/cpp/debug_router_log_harmony.h",
    "src/main/cpp/debug_router_message_handler_harmony.cc",
    "src/main/cpp/debug_router_message_handler_harmony.h",
    "src/main/cpp/debug_router_session_handler_harmony.cc",
    "src/main/cpp/debug_router_session_handler_harmony.h",
    "src/main/cpp/debug_router_state_listener_harmony.cc",
    "src/main/cpp/debug_router_state_listener_harmony.h",
    "src/main/cpp/entry.cc",
    "src/main/cpp/native_slot_harmony.cc",
    "src/main/cpp/native_slot_harmony.h",
  ]

  deps = [
    "//debug_router/native:debug_router_core",
  ]

  cflags = [
    "-Wno-sign-compare",
    "-Wno-unused-private-field",
    "-Wno-unused-variable",
    "-Wno-unused-result",
  ]
  cflags_cc = []

  libs = [
    "ace_napi.z",
    "hilog_ndk.z",
    "uv",
  ]
}
